--- a/_config.yml
+++ b/_config.yml
@@ -58,28 +58,22 @@ plugins:
   - jekyll-include-cache
 
 author:
-  name   : "First Lastname"
-  avatar : "/assets/images/bio-photo.jpg"
-  bio    : "My awesome biography constrained to a sentence or two goes here."
+  name   : "Keisatsu"
+  avatar : "/assets/images/keisatsu.png"
+  bio    : "Keisatsu is a multi-purpose Discord bot."
   links:
     - label: "Website"
       icon: "fas fa-fw fa-link"
-      url: "https://"
-    - label: "Twitter"
-      icon: "fab fa-fw fa-twitter-square"
-      url: "https://twitter.com/"
-    - label: "GitHub"
-      icon: "fab fa-fw fa-github"
-      url: "https://github.com/"
-    - label: "Instagram"
-      icon: "fab fa-fw fa-instagram"
-      url: "https://instagram.com/"
+      url: "https://itsnuaz.github.io/"
+    - label: "Discord"
+      icon: "fab fa-fw fa-discord"
+      url: "https://discord.com/invite/UJEZQ88"
 
 footer:
   links:
     - label: "Discord"
       icon: "fab fa-fw fa-discord"
-      url: "https://discord.gg/UJEZQ88"
+      url: "https://discord.com/invite/UJEZQ88"
 
 defaults:
   # _posts
@@ -88,7 +82,7 @@ defaults:
       type: posts
     values:
       layout: single
-      author_profile: false
+      author_profile: true
       read_time: true
       comments: true
       share: true
@@ -99,7 +93,7 @@ defaults:
       type: pages
     values:
       layout: single
-      author_profile: false
+      author_profile: true
 
 category_archive:
   type: liquid
